Configure repo for Netlify
Tell git to ignore rendered files and _site/ folder; tell netlify to
deploy _site/ when deploying with `netlify deploy`

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 _data/
 _notes/
+
+# Rendered site
 _site/
+
+# Results from rendering posts
+*.html
+*_cache/
+*_files/
+
+# Local Netlify folder
+.netlify
