Add support for comments and corrections
Corrections support is provided by adding the source repository url, so
that Distill adds a link in the appendix to open a new issue. Comments
support is provided through utterances (using https://utteranc.es/)
using the method described by
https://github.com/MilesMcBain/milesmcbain.com/blob/master/utterances.html
and
https://github.com/rstudio/distill/issues/155#issuecomment-694296957.

--- a/_site.yml
+++ b/_site.yml
@@ -1,6 +1,7 @@
 name: "qmm"
 title: "Quantitative Microbiome Measurement"
 base_url: https://microbiomemeasurement.org
+repository_url: https://github.com/mikemc/qmm
 description: |
   Quantitative Microbiome Measurement
 output_dir: "_site"
@@ -10,4 +11,8 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
-output: distill::distill_article
+output: 
+  distill::distill_article:
+    includes:
+      in_header: _utterances.html
+        
